# PyBH

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  environment.yaml  get_lifelines_data.py  pyproject.toml
PyBH/: demo  get_lifelines_data.py  get_recur_data.py  get_test_data.py  load_data.py  pymc_models.py  split_data.py
PyBH/SurvivalAnalysis/: BayesianSurvivalModel  SurvivalAnalysis.py  cox.py  example_cox.ipynb  main.py  pymc_models.py  test.py  workflow.py
PyBH/SurvivalAnalysis/core/: interface  workflow
PyBH/SurvivalAnalysis/examples/: weibull_mastectomy.ipynb
PyBH/SurvivalAnalysis/models/: cox.py  cox_demo.ipynb
PyBH/data/: lung_cancer.csv  processed_dataset.csv
PyBH/utils/: auto_schema.py  config.py  logger.py
docs/: requirements.txt
docs/source/: PyBH.SurvivalAnalysis.pymc_models.rst  PyBH.SurvivalAnalysis.rst  PyBH.rst  PyBH.utils.rst  conf.py  index.rst
docs/source/Survival Analysis/Cox/: Cox.rst
docs/source/Survival Analysis/Kaplan Meier/: Kaplan_Meier.rst
docs/source/Survival_Analysis/: index.rst
docs/source/Survival_Analysis/Cox/: Cox.rst  Hypothesis.rst  cox_mastectomy.ipynb  math.rst
docs/source/Survival_Analysis/Kaplan_Meier/: Hypothesis.rst  Kaplan_Meier.rst  kaplan_meier.ipynb
docs/source/Survival_Analysis/Metrics/: Metrics.rst
docs/source/Survival_Analysis/Weibull/: Hypothesis.rst  (+2 more)
docs/source/_autosummary/: PyBH.rst
docs/source/notebooks/: Bayesian Survival Analysis.ipynb  Bayesian Survival Analysis_Lung_Cancer.ipynb  cox_example.ipynb  kaplan_meier.ipynb  linear_regression.ipynb
